WindowsPreviews: fix spacing.
Adjust padding to make everything symmetric.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -131,3 +131,7 @@
     border-right-width: 1px;
     margin: 32px 0px;
 }
+
+.dashtodock-app-well-preview-menu-item {
+    padding: 1em 1em 0.5em 1em;
+}
